--- a/Maps/style.css
+++ b/Maps/style.css
@@ -1,9 +1,5 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-#map {
-    height: 50%;
-
+#map-container {
+    height: 500px;
+    width: 100%;
+    padding-top: 150px !important;
 }
